syntax = "proto3";

package contact;

option go_package = "./contact";

// 空消息
message Empty {}

// 消息结构体
message Message {
  int32 Id = 1;
  string Content = 2;
  int32 CreateTime = 3;
  int32 FromId = 4;
  int32 ToId = 5;
}

service Contact {
  rpc CreateMessage (CreateMessageRequest) returns (Empty);
  rpc GetLatestMessage (GetLatestMessageRequest) returns (GetLatestMessageResponse);
  rpc GetMessageList (GetMessageListRequest) returns (GetMessageListResponse);
}

message GetLatestMessageRequest {
  int32 UserAId = 1;
  int32 UserBId = 2;
}

message GetLatestMessageResponse {
  Message Message = 1;
}

message CreateMessageRequest {
  int32 FromId = 1;
  int32 ToId = 2;
  string content = 3;
}

message GetMessageListRequest {
  int32 FromId = 1;
  int32 ToId = 2;
}

message GetMessageListResponse {
  repeated Message Messages = 1;
}